[bdist_wheel]
python-tag = py3

[metadata]
license_file = LICENSE

[options.extras_require]
test =
    pytest~=7.1.3
    pytest-cov>=2.8.1
    pytest-randomly>=3.12.0

flake8 =
    flake8>=7.0.0
    pep8-naming  # naming conventions check
    flake8-builtins
    flake8-bugbear
    flake8-isort  # check if import is sorted
    darglint
    flake8-bandit  # security check
    flake8-return
    flake8-docstrings>=1.7.0

mypy =
    mypy

tox_gh =
    tox-gh-actions
    
tox = tox>=4.0.0

